# ibm-ds-course

./: .gitignore  DataScienceEcosystem.ipynb  README.md  pyproject.toml
10_Applied_DS_Capstone/: 01_data-collection-api.ipynb  02_webscraping.ipynb  03_data-wrangling.ipynb  04_eda-dataviz.ipynb  05_eda-sql.ipynb  06_interactive-map-folium.ipynb  07_dashboard-dash-app.py  08_machine-learning-predictive-analysis.ipynb  Data_Science_Capstone_Project.pdf:Zone.Identifier  dataset_part_1.csv  my_data1.db
data-engineering-professional/03-Python-Project-for-Data-Engineering/: db_code.py  etl_code-log_file.txt  etl_code.py  etl_practice-log_file.txt  etl_practice.py  etl_project_gdp.py  webscraping_movies.py
data-engineering-professional/03-Python-Project-for-Data-Engineering/db_code/: STAFF.db
data-engineering-professional/03-Python-Project-for-Data-Engineering/etl_code/: log_file.txt
data-engineering-professional/03-Python-Project-for-Data-Engineering/etl_practice/: log_file.txt
data-engineering-professional/03-Python-Project-for-Data-Engineering/final_project/: Banks.db  banks_project.py  code_log.txt
data-engineering-professional/03-Python-Project-for-Data-Engineering/mymath/: basic.py  stats.py
data-engineering-professional/06-linux-shell-scripting/: greetnew.sh  hello_world.sh  pets.txt
data-science-professional/10_Applied_DS_Capstone/: 01_data-collection-api.ipynb  02_webscraping.ipynb  03_data-wrangling.ipynb  04_eda-dataviz.ipynb  05_eda-sql.ipynb  06_interactive-map-folium.ipynb  07_dashboard-dash-app.py
intro/: DataScienceEcosystem.ipynb
(+126 files in other folders)
